2002-11-01  Paolo Maggi <maggi@athena.polito.it>

	* configure.in: bump version to 2.1.2, 
	require libgnomeprintui >= 1.120.0

	* README: bump version to 2.1.2

2002-10-27  Paolo Maggi <maggi@athena.polito.it>

	* data/gedit.schemas.in	: update long description for
	the Toolbar Buttons Style key

2002-10-15  Paolo Maggi <maggi@athena.polito.it>

	* configure.in: require libgnomeui >= 2.1.1
	
	* TODO: Updated

2002-10-14  Paolo Maggi <maggi@athena.polito.it>

	* configure.in:
	* README: bump version to 2.1.1

2002-10-14  Paolo Maggi <maggi@athena.polito.it>

	* TODO: Updated

2002-10-12  Paolo Maggi <maggi@athena.polito.it>

	* configure.in:  added plugins/sort/Makefile to AC_OUTPUT

2002-10-11  Paolo Maggi <maggi@athena.polito.it>

	* data/gedit.schemas.in: added auto_indent and
	insert_spaces keys

2002-10-05  Paolo Maggi <maggi@athena.polito.it>
	
	* TODO: Updated

2002-10-03  Paolo Maggi <maggi@athena.polito.it>
	
	* TODO: Updated

2002-10-03  Paolo Maggi <maggi@athena.polito.it>

	[ gedit 2.1.0.1 released ]

2002-10-03  Paolo Maggi <maggi@athena.polito.it>

	* configure.in:
	* README: bump version to 2.1.0.1

2002-10-01  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): dist message-of-doom

2002-09-27  Paolo Maggi <maggi@athena.polito.it>

	* message-of-doom: new file

	* configure.in: print the message-of-doom

2002-09-20  Marius Andreiana <mandreiana@yahoo.com>

	* help/ro/gedit.xml: small update

2002-09-19  Jacob Berkman  <jacob@ximian.com>

	* configure.in: add hlp/ro/

2002-09-18  Marius Andreiana <mandreiana@yahoo.com>

	* help/Makefile.am: added ro subdir
	* help/ro: added romanian help translation

2002-09-16  James Willcox  <jwillcox@gnome.org>

	* configure.in:  Add src/recent-files/Makefile.am to AC_OUTPUT

2002-09-10  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: check for pspell/pspell.h also.

2002-09-07  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in:  added plugins/spell/Makefile to AC_OUTPUT,
	checks for pspell
