@@ -68,7 +68,7 @@ dnl
 dnl Start of pkg-config checks
 dnl
 PKG_CHECK_MODULES(GEDIT, libgnomeui-2.0 >= 2.1.1 libglade-2.0 >= 2.0.0
-                         libgnomeprintui-2.0 >= 1.120.0 
+                         libgnomeprintui-2.2 >= 2.1.1 
                          eel-2.0 >= 2.0.0)
 GEDIT_LIBS="${GEDIT_LIBS}"
 AC_SUBST(GEDIT_LIBS)
