@@ -1,3 +1,8 @@
+2002-11-01  Jody Goldberg <jody@gnome.org>
+
+	* src/gedit-print.c : handle updated api
+	* configure.in: require libgnomeprintui >= 2.1.1
+	
 2002-11-01  Paolo Maggi <maggi@athena.polito.it>
 
 	* configure.in: bump version to 2.1.2, 
